# excel-validator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
configuration/: README.md
docker/: Dockerfile  README.md  build.sh  config.ini  docker-compose.yml  webservice_start.sh  webservice_stop.sh
documentation/: README.md  configuration.md  configuration_validation.md  configuration_webservice.md
src/excel_validator/: config.ini  config.json  report.py  validator.py  webservice.py
src/excel_validator/config/agent/historical/: config.json
src/excel_validator/config/agent/precision/: config.json
src/excel_validator/config/miappe/: config.json
src/excel_validator/config/mimiappe/schema/: biologicalmaterial.schema.json  experimentalfactor.schema.json  observationunit.checklist.json  observationunit.schema.json  study.schema.json
src/excel_validator/script/: service.py
src/excel_validator/static/js/: excel-validator.js
src/excel_validator/templates/: service.html
src/xlsx_validator/: report.py
src/xlsx_validator/config/agent/historical/: config.json
src/xlsx_validator/config/agent/historical/schema/: experiment.checklist.json
src/xlsx_validator/config/agent/precision/: config.json
src/xlsx_validator/script/: service.py
