[project]
name = "xlsx-validator"
authors = [
  { name="Matthijs Brouwer", email="matthijs.brouwer@wur.nl" },
]
description = "Validation of template based XLSX-files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dynamic = ["dependencies","version"]
classifiers = [
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/matthijsbrouwer/xlsx-validator"

[project.scripts]
xlsx_validator = "xlsx_validator.script.service:service"

[build-system]
requires = [
    "read_version[toml] ~= 0.3.0",
    "setuptools >= 42.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
xlsx_validator = ["**/*.json"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.read_version]
version = "src.xlsx_validator._version:__version__"

